[package]
name = "oxide_authenticator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boringauth = "0.9.0"
totp-rs = "3.1.0"
colored = "2.0.0"
crossterm = "0.25.0"
magic-crypt = "3.1.12"
inquire = "0.5.2"